--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "env-cmd .env nodemon app.js"
+    "dev": "env-cmd ./config/.env nodemon app.js"
   },
   "author": "Diskordlit",
   "license": "ISC",
