--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-query-parser": "^1.2.0",
     "nanoid": "^3.1.25"
   },
   "devDependencies": {
