--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,27 @@
 {
-    "name": "FlashGuard",
-    "description": "Enjoy a safer movie experience with FlashGuard",
-    "version": "1.0",
-    "manifest_version": 3,
-    "permissions": ["storage", "activeTab", "scripting"],
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-          "16": "/images/logo16.png",
-          "32": "/images/logo32.png",
-          "48": "/images/logo48.png",
-          "128": "/images/logo128.png"
-        }
-    },
-
-    "icons": {
+  "name": "FlashGuard",
+  "description": "Enjoy a safer movie experience with FlashGuard",
+  "version": "1.0",
+  "manifest_version": 3,
+  "permissions": ["storage", "activeTab", "scripting"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
       "16": "/images/logo16.png",
       "32": "/images/logo32.png",
       "48": "/images/logo48.png",
       "128": "/images/logo128.png"
     }
+  },
+  "background": {
+    "service_worker": "storageSenser.js"
+
+  },
+
+  "icons": {
+    "16": "/images/logo16.png",
+    "32": "/images/logo32.png",
+    "48": "/images/logo48.png",
+    "128": "/images/logo128.png"
+  }
 }
